<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <carbon.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:carbon_elevation="@dimen/carbon_elevationMedium">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            style="@style/ToolbarTheme">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size"/>
        </android.support.v7.widget.Toolbar>

    </carbon.widget.LinearLayout>

    <carbon.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <carbon.widget.Button
            android:id="@+id/login_sign_in_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_in" />

        <carbon.widget.Button
            android:id="@+id/login_skip_login_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_skip_login" />

    </carbon.widget.LinearLayout>
</carbon.widget.LinearLayout>
